--- a/index.html
+++ b/index.html
@@ -7,34 +7,52 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-
 </head>
 
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+  <div class="wrapper">
+    <div class="img-wrap">
+      <img class="graphic" src="./images/illustration-woman-online-mobile.svg" alt="">
+    </div>
+    <div class="faqs-block">
+      <h1>FAQ</h1>
+      <details>
+        <summary>How many team members can I invite?</summary>
+        You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium
+        plan.
+      </details>
+      <details>
+        <summary>What is the maximum file upload size?</summary>
+        <div class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</div>
+      </details>
+      <details>
+        <summary> How do I reset my password?</summary>
+        Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be
+        emailed to you.
+      </details>
+      <details>
+        <summary>Can I cancel my subscription?</summary>
+        Yes! Send us a message and we'll process your request no questions asked.
+      </details>
+      <details>
+        <summary>Do you provide additional support?</summary>
+        Chat and email support is available 24/7. Phone lines are open during normal business hours.
+      </details>
+    </div>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Sarah Wilkes</a>.
   </div>
 </body>
 
