add correct colors, fix image placement

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <div class="wrapper">
-    <div class="img-wrap">
+    <div class="img-wrap-mobile">
       <img class="graphic" src="./images/illustration-woman-online-mobile.svg" alt="">
     </div>
     <div class="faqs-block">
