begin desktop layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 <body>
   <div class="wrapper">
     <div class="img-wrap-mobile">
-      <img class="graphic" src="./images/illustration-woman-online-mobile.svg" alt="">
+      <img class="graphic-mobile" src="./images/illustration-woman-online-mobile.svg" alt="">
+    </div>
+    <div class="img-wrap-desktop">
+      <img class="graphic-desktop" src="./images/illustration-woman-online-desktop.svg" alt="">
     </div>
     <div class="faqs-block">
       <h1>FAQ</h1>
