fix units, work on layout

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 <body>
   <div class="wrapper">
-    <div class="img-wrap-mobile">
+    <div class="graphic-wrap-mobile">
       <img class="graphic-mobile" src="./images/illustration-woman-online-mobile.svg" alt="">
     </div>
-    <div class="img-wrap-desktop">
+    <div class="graphic-wrap-desktop">
       <img class="graphic-desktop" src="./images/illustration-woman-online-desktop.svg" alt="">
     </div>
     <div class="faqs-block">
