--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <div class="graphic-wrap-desktop">
       <div class="inside-grid">
 
-        <svg id="illustration-desktop" viewbox="70 -100 472 600" xmlns="http://www.w3.org/2000/svg">
+        <svg id="illustration-desktop" viewbox="70 -90 420 550" xmlns="http://www.w3.org/2000/svg">
           <svg id="bg-pattern-desktop" width="966" height="945" viewbox="500 350 966 945">
             <g fill-rule="nonzero" fill="none" opacity=".099">
               <path
@@ -394,8 +394,8 @@
   </div>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Sarah Wilkes</a>.
+    Challenge by <a href="https://www.frontendmentor.io" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://mightycoyote.github.io/">Sarah Wilkes</a>.
   </div>
 </body>
 
